# NBA_stats

./: drawCourt.py  gitCopilotTest.py  notes.txt  pyproject.toml  shotChartDetail.ipynb  test.ipynb  venv_activation.txt
lib/: credentials.py  odds.py  utils.py
